# openclaw-workspace

./: .gitignore  AGENTS.md  FUTURE_LIST.md  IDENTITY.md  MEMORY.md  STRUCTURE.md  USER.md  WORKFLOW.md  WORK_INDEX.md  index.html  package-lock.json  package.json  sources.yaml  translate_pdf_ja.py
.openclaw/: workspace-state.json
archive/projects/crypto-arb-bot/: .env.example  .gitignore  FEE_SOURCES.md  PROD_PLAN.md  README.md  REPORT.md  REPORT_PROD.md  pyproject.toml  requirements.txt
archive/projects/crypto-arb-bot/arb_bot/: backtest.py  bot.py  config.py  connectors.py  costs.py  engine.py  execution.py  fee_probe.py  inventory.py  market_data.py  models.py  observability.py  order_manager.py  risk.py  strategy.py
archive/projects/crypto-arb-bot/config/: default.yaml
archive/projects/crypto-arb-bot/data/: generate_sample_data.py  sample_history.csv  sample_market.csv
archive/projects/crypto-arb-bot/docs/: research_fees.md
archive/projects/crypto-arb-bot/reports/: fee_probe.json  fee_snapshot.json  summary.csv  trades_no_transfer.csv  trades_transfer.csv
archive/projects/crypto-arb-bot/reports/logs/: decisions.jsonl
archive/projects/crypto-arb-bot/scripts/: fetch_fee_snapshot.py  metrics_summary.py  paper_trade.py  run_backtest.py
archive/projects/crypto-arb-bot/tests/: test_costs.py  test_execution.py  test_market_data_and_risk.py  test_production_guards.py
claude-codex-collab/: SKILL.md
markets/: README.md  WORKLOG-2026-02-18.md  implementation-plan-day1-day3.md  x-grok-daily-collector-design.md
memory/: 2026-02-03-0113.md  2026-02-03-0218.md  (+77 more)
(+223 files in other folders)
